fix alignment of dessert descriptions with pics

--- a/styles.css
+++ b/styles.css
@@ -17,42 +17,44 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 480px 480px 480px;
-    /* flex-direction: row; */
-    gap: 15px;
+    grid-template-columns: 300px 300px 300px;
+    gap: 5px;
+
 }
 
+/* 
 #waffle-all {
     display: flex;
     flex-direction: column;
-    border: 5px solid blue;
+
     gap: 5px;
-}
+} */
 
 
+/* 
 
-
-/* .product-all {
+  .product-all {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
-    border: 5px solid blue;
-} */
 
+} 
+ */
 
 
     .image-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 5px solid red;
+
 }
 
 #food-image {
     width: 250px;
     height: 250px;
     border-radius: 12px;
+    /* border: 3px solid hsl(25, 43%, 57%)  */ //only when selected
 }
 
 .cart-button {
@@ -68,9 +70,10 @@ body {
 #food-info {
     display: flex;
     flex-direction: column;
-    align-items: right;
+    align-items: left;
     gap: 5px;
-    border: 5px solid green;
+    margin-left: 25px;
+
 }
 
 .product-general {
